# op_engine

./: .gitignore  .yamllint.yaml  LICENSE  README.md  conftest.py  justfile  mkdocs.yml  pyproject.toml  uv.toml
.github/workflows/: ci.yaml  gh-pages.yaml  release.yaml  yaml.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/api-reference/core_solver/: index.html
0.1/api-reference/matrix_ops/: index.html
0.1/api-reference/model_core/: index.html
0.1/development/creating-a-release/: index.html
0.1/guides/getting-started/: index.html
0.1/search/: search_index.json
docs/: index.md
docs/development/: creating-a-release.md
docs/guides/: getting-started.md
examples/: __init__.py  biogeo_split_diagnostic.py  biogeochemical_network.py  simple_sir.py
flepimop2-op_engine/: LICENSE  README.md  pyproject.toml
flepimop2-op_engine/src/flepimop2/engine/op_engine/: __init__.py  config.py  engine.py  errors.py  types.py
flepimop2-op_engine/tests/: conftest.py  test_config.py  test_engine.py  test_errors.py  test_integration_cli.py  test_types.py
flepimop2-op_engine/tests/data/: config.yaml  sir.py
outputs/: biogeochemical_network_runtime.txt
scripts/: api-reference.py  release_validate.py
src/op_engine/: __init__.py  core_solver.py  matrix_ops.py  model_core.py
src/op_engine/flepimop2/: __init__.py  config.py  engine.py  errors.py  types.py
tests/: conftest.py  test_core_solver.py  test_core_solver_accuracy.py  test_core_solver_plumbing.py  test_diffusion_convergence.py  test_imex_trbdf2.py  test_matrix_ops.py  test_model_core.py  test_reaction_diffusion_imex.py
tests/flepimop2/: test_config.py  test_engine.py  test_errors.py  test_types.py
tests/op_engine/: test_core_solver_accuracy.py  test_core_solver_plumbing.py  test_model_core.py
