[project]
name = "op_engine"
version = "0.1.1"
description = "Multiphysics integration engine for ODEs and PDEs using implicit-explicit operator splitting"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
authors = [
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" },
]
keywords = ["multiphysics", "ODE", "PDE", "IMEX", "operator-splitting", "solver"]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/ACCIDDA/op_engine"
Documentation = "https://accidda.github.io/op_engine/"
Issues = "https://github.com/ACCIDDA/op_engine/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mypy>=1.18.2",
    "matplotlib>=3.8",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "mike>=2.1.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.1",
    "mkdocs-autorefs>=1.4.3",
    "scipy-stubs>=1.17.1.3",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/",
    "src/op_engine/",
    "tests/",
]
markers = [
    "flepimop2: (deprecated) marker previously used for op_engine.flepimop2 integration tests; move these to flepimop2-op_engine",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "CPY001",
    "D203",
    "D212",
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "S101"]
"scripts/**/*" = [
    "N999",  # Invalid module name
    "T201",  # `print` found
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = ["examples/"]

[tool.hatch.build.targets.wheel]
packages = ["src/op_engine"]
include = ["src/op_engine/py.typed"]

[tool.uv]
required-version = ">=0.4.17"
